--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/google-gtag": "^1.0.4",
     "cross-env": "^5.2.0",
